Save window size properly

This is following the current best practice as layed out in
https://wiki.gnome.org/HowDoI/SaveWindowState. It is important
to use gtk_window_get_size, otherwise the window will grow
under Wayland.

https://bugzilla.gnome.org/show_bug.cgi?id=762231